--- a/src/langgraph_agent/ui/uiconfigfile.ini
+++ b/src/langgraph_agent/ui/uiconfigfile.ini
@@ -2,4 +2,4 @@
 PAGE_TITLE = LangGraph: Build Stateful Agentic AI Graphs
 LLM_OPIONS = Groq
 USECASE_OPTIONS = Basic Chatbot
-GROQ_MODEL_OPTIONS = mixtral-8x7b-32768, llama3-8b-8192, llama3-70b-8192, gemma-7b-i
+GROQ_MODEL_OPTIONS = qwen/qwen3-32b, deepseek-r1-distill-llama-70b, llama-3.3-70b-versatile, gemma2-9b-it
